Main para ler arquivo e mudança no removeMin.